# pdmlib

./: .gitignore  LICENSE.md  README.md  pyproject.toml  test_ieso_column_removal.py
.github/workflows/: ci.yml
app/: main.py  main.py.backup  main_clean.py  simulation_main.py
app/config/: __init__.py  config_manager.py
app/core/actors/: __init__.py  base.py  config.py  heuristic.py
app/core/environment/: __init__.py  actions.py  config.py  observations.py  power_management_env.py  rewards.py  spec_models.py
app/core/simulation/: __init__.py  battery_simulator.py  caiso_data.py  ieso_data.py  open_meteo_data.py  plant.py  portfolio.py  price_provider.py  price_regions.py  provider_config.py  pv_generation_provider.py  pv_model.py  pvlib_models.py  simulation_manager.py  solar_revenue.py  weather.py  weather_provider.py
app/core/utils/: __init__.py  api_clients.py  caching.py  data_processing.py  date_handling.py  http_cache.py  location.py  logging.py  portfolio_context.py  storage.py
scripts/: lint-format.sh  lint.sh  test.sh
tests/: conftest.py  test_main.py
tests/config/: 10mw_solar_farm.json  __init__.py  config_manager.py  portfolio_multi_plant_config.json  solar_battery_plant_test.json  solar_farm_10mw_advanced_arrays.json  test_config_multi.json  test_config_simple.json  test_portfolio_config.json
tests/core/actors/: __init__.py  test_agent_config.py  test_heuristic.py
tests/core/config/: test_agent_config.json
tests/core/environment/: __init__.py  test_agent_integration.py  test_simple_environment.py
tests/core/simulation/: test_advanced_10mw_system.py  test_advanced_pvlib_models.py  test_battery_simulator.py  test_component_validation.py  test_final_consolidation.py  test_integration_consolidation.py  test_large_pv_system.py  test_physics_validation.py  test_plant_csv.py  test_portfolio.py  test_price_providers.py  test_provider_config.py  test_pv_model.py  test_pvlib_consolidated.py  test_pvlib_models.py  test_simulation_manager.py  test_weather.py  test_weather_provider.py
tests/core/utils/: __init__.py  test_api_clients.py  test_caching.py  test_data_processing.py  test_date_handling.py  test_storage.py
tests/data/: sample_price_data.csv  sample_weather_data.csv  sample_weather_ghi_only.csv
